{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 51,
  "lineage": "f98d53e8-fc80-a35f-a165-6c8983710c89",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07f2fc908758db853",
            "domain": "vpc",
            "id": "eipalloc-07f2fc908758db853",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-18-202-129-240.eu-west-1.compute.amazonaws.com",
            "public_ip": "18.202.129.240",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bed3b2519c0c407f",
            "arn": "arn:aws:ec2:eu-west-1:083011581336:instance/i-00972232fe664727f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00972232fe664727f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0eb19f2c3c42a67bc",
            "private_dns": "ip-10-32-1-180.eu-west-1.compute.internal",
            "private_ip": "10.32.1.180",
            "public_ip": "52.212.45.18",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0006fe0de57cb0cb6",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b789dc76d5c47754",
            "tags": {
              "Name": "Ubuntu"
            },
            "tags_all": {
              "Name": "Ubuntu"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d10cf6218a8f45fa"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.public-eu-west-1a",
            "aws_vpc.order66"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:083011581336:internet-gateway/igw-0a33a9b34fe26eace",
            "id": "igw-0a33a9b34fe26eace",
            "owner_id": "083011581336",
            "tags": {
              "Name": "app1_IG",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "app1_IG",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "vpc_id": "vpc-07b3efc3b6bb75d0b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.order66"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app1_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:083011581336:targetgroup/app1-target-group/b12cb2ff5e93320f",
            "arn_suffix": "targetgroup/app1-target-group/b12cb2ff5e93320f",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:083011581336:targetgroup/app1-target-group/b12cb2ff5e93320f",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "app1-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "App1TargetGroup",
              "Owner": "User",
              "Project": "Web Service",
              "Service": "App1"
            },
            "tags_all": {
              "Name": "App1TargetGroup",
              "Owner": "User",
              "Project": "Web Service",
              "Service": "App1"
            },
            "target_type": "instance",
            "vpc_id": "vpc-07b3efc3b6bb75d0b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.order66"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07f2fc908758db853",
            "connectivity_type": "public",
            "id": "nat-0aa328ffe09cead9f",
            "network_interface_id": "eni-063c74f0c5ee34350",
            "private_ip": "10.32.1.249",
            "public_ip": "18.202.129.240",
            "subnet_id": "subnet-0b789dc76d5c47754",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public-eu-west-1a",
            "aws_vpc.order66"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:083011581336:route-table/rtb-01d2baebcedc84b03",
            "id": "rtb-01d2baebcedc84b03",
            "owner_id": "083011581336",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0aa328ffe09cead9f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b3efc3b6bb75d0b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public-eu-west-1a",
            "aws_vpc.order66"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:083011581336:route-table/rtb-049c1e0546e702497",
            "id": "rtb-049c1e0546e702497",
            "owner_id": "083011581336",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a33a9b34fe26eace",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b3efc3b6bb75d0b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.order66"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-eu-west-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c1aac065caa8646",
            "route_table_id": "rtb-01d2baebcedc84b03",
            "subnet_id": "subnet-0fe4b01a1fa90f226"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private-eu-west-1a",
            "aws_subnet.public-eu-west-1a",
            "aws_vpc.order66"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-eu-west-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c71f8d550b11d7a",
            "route_table_id": "rtb-01d2baebcedc84b03",
            "subnet_id": "subnet-0f5ae58c2ff2c9e59"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private-eu-west-1b",
            "aws_subnet.public-eu-west-1a",
            "aws_vpc.order66"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-eu-west-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb1a762052aa31db",
            "route_table_id": "rtb-01d2baebcedc84b03",
            "subnet_id": "subnet-01d94214b5db9a1f3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private-eu-west-1c",
            "aws_subnet.public-eu-west-1a",
            "aws_vpc.order66"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-eu-west-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d5756303c68e62b",
            "route_table_id": "rtb-049c1e0546e702497",
            "subnet_id": "subnet-0b789dc76d5c47754"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public-eu-west-1a",
            "aws_vpc.order66"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-eu-west-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a3542d30f34f826",
            "route_table_id": "rtb-049c1e0546e702497",
            "subnet_id": "subnet-05870a765d3a32638"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public-eu-west-1b",
            "aws_vpc.order66"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-eu-west-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-045fe41363ae8aebe",
            "route_table_id": "rtb-049c1e0546e702497",
            "subnet_id": "subnet-0f5a198e14a64af68"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public-eu-west-1c",
            "aws_vpc.order66"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app1-sg01-servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:083011581336:security-group/sg-0762a0949ce4950d8",
            "description": "app1-sg01-servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0762a0949ce4950d8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MyEvilBox",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MyHomePage",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "app1-sg01-servers",
            "name_prefix": "",
            "owner_id": "083011581336",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app1-sg01-servers",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "app1-sg01-servers",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b3efc3b6bb75d0b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.order66"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-eu-west-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:083011581336:subnet/subnet-0fe4b01a1fa90f226",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.32.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe4b01a1fa90f226",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "083011581336",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-eu-west-1a",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "private-eu-west-1a",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "vpc_id": "vpc-07b3efc3b6bb75d0b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.order66"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-eu-west-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:083011581336:subnet/subnet-0f5ae58c2ff2c9e59",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.32.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5ae58c2ff2c9e59",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "083011581336",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-eu-west-1b",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "private-eu-west-1b",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "vpc_id": "vpc-07b3efc3b6bb75d0b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.order66"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-eu-west-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:083011581336:subnet/subnet-01d94214b5db9a1f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.32.13.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d94214b5db9a1f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "083011581336",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-eu-west-1c",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "private-eu-west-1c",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "vpc_id": "vpc-07b3efc3b6bb75d0b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.order66"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-eu-west-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:083011581336:subnet/subnet-0b789dc76d5c47754",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.32.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b789dc76d5c47754",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "083011581336",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-eu-west-1a",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "public-eu-west-1a",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "vpc_id": "vpc-07b3efc3b6bb75d0b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.order66"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-eu-west-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:083011581336:subnet/subnet-05870a765d3a32638",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.32.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05870a765d3a32638",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "083011581336",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-eu-west-1b",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "public-eu-west-1b",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "vpc_id": "vpc-07b3efc3b6bb75d0b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.order66"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-eu-west-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:083011581336:subnet/subnet-0f5a198e14a64af68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.32.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5a198e14a64af68",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "083011581336",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-eu-west-1c",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "public-eu-west-1c",
              "Owner": "Luke",
              "Planet": "Musafar",
              "Service": "application1"
            },
            "vpc_id": "vpc-07b3efc3b6bb75d0b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.order66"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "order66",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:083011581336:vpc/vpc-07b3efc3b6bb75d0b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.32.0.0/16",
            "default_network_acl_id": "acl-020124bf0c4732e5d",
            "default_route_table_id": "rtb-054bd8dd2844822be",
            "default_security_group_id": "sg-0d10cf6218a8f45fa",
            "dhcp_options_id": "dopt-07925c12929556c15",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-07b3efc3b6bb75d0b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-054bd8dd2844822be",
            "owner_id": "083011581336",
            "tags": {
              "Name": "order66",
              "Owner": "ThomasBell",
              "Planet": "DeathStar",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "order66",
              "Owner": "ThomasBell",
              "Planet": "DeathStar",
              "Service": "application1"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}